cncProd/force-app/main/default/objects/RA_Global_Variable__c/RA_Global_Variable__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom Setting for Republic Auto modules</description>
    <label>RA Global Variable</label>
</CustomObject>