cncProd/force-app/main/default/objects/RA_Global_Variable__c/fields/APIGateway_Key__c.field-meta.xml
<CustomField>
    <fullName>APIGateway_Key__c</fullName>
    <description>API Gateway&apos;s apikey</description>
    <inlineHelpText>API Gateway&apos;s apikey</inlineHelpText>
    <label>APIGateway Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>