cncProd/force-app/main/default/objects/RA_Global_Variable__c/fields/APIGateway_URL__c.field-meta.xml
<CustomField>
    <fullName>APIGateway_URL__c</fullName>
    <description>API Gateway URL</description>
    <inlineHelpText>API Gateway URL</inlineHelpText>
    <label>APIGateway URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>