cncProd/force-app/main/default/objects/RA_Global_Variable__c/fields/Default_RA_OwnerId__c.field-meta.xml
<CustomField>
    <fullName>Default_RA_OwnerId__c</fullName>
    <label>Default RA OwnerId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>